--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,12 @@ hr {
 
 
 .list-container {
-  max-width: 600px;
+  max-width: 800px;
+  margin: auto;
+}
+
+.list-container-work-ex {
+  max-width: 810px;
   margin: auto;
 }
 
